--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -19,7 +19,7 @@
 
   &__social {
     text-align: center;    
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
     @media screen and (max-width: 767px) {
       margin-top: 60px;
     }
@@ -69,7 +69,7 @@
   align-items: baseline;
   justify-content: center;
   flex-wrap: nowrap;
-   margin-bottom: 60px;
+  //  margin-bottom: 60px;
 
    @media  screen and (max-width: 767px) {
     display: block;
