--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -86,14 +86,24 @@
   }
   
   &__checkbox {
+    display: block;
     position: relative;
     @extend %flex;   
     margin-bottom: 30px;
-    padding-left: 34px;
-    margin-top: 20px;
+    padding-left: 22px;
+    margin-top: 20px;    
+    font-size: 10px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-  
+    @media  screen and (min-width: 420px) {
+      white-space: nowrap;
+      font-size: 12px;
+      
+    }
+  @media  screen and (min-width: 1200px) {
+      font-size: 14px;  
+      padding-left: 32px;     
+  }
     color: var(--primary-text-color-theme-light);
   }
   
