--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,6 +10,7 @@
 
   @media screen and (max-width: 767px) {
     width: 100%;
+    // height: 100%;
     justify-content: space-between;
   }
   @media screen and (min-width: 768px) {
@@ -45,6 +46,12 @@
 }
 .header__button.is-open .menu__icon-menu {
   display: none;
+}
+
+.header__button.is-open {
+  position: fixed;
+  top:12px;
+  right: 12px;
 }
 
 .header__social-list {
