--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,6 +1,7 @@
-.navigation {
+.navigation {  
   @media screen and (max-width: 767px) {
-    margin-bottom: 306px;
+    margin-bottom: auto;
+    // height: 100%;
   }
 
   @media screen and (min-width: 768px) {
