--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -3,11 +3,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // margin-bottom: 24px;
+    
     @media screen and (min-width: 1200px) { 
       margin-bottom: 30px; 
     }    
   }
-  
+  &__item {
+    @media screen and (max-width: 1199px) { 
+    margin-bottom: 24px;
+  }
+}
   &__item:not(:last-child) {
     margin-right: 10px;
   }
