--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -49,14 +49,19 @@ ul {
   }
   @media screen and (max-width: 767px) {
     display: none;
-    position: absolute;    
+    // position: absolute; 
+    position: fixed;    
     top: 0;
     left: 0;
+    overflow-y: scroll;
     width: 100%;
+    height: 100%;
+    // max-width: 480px;
     background-color: white;
     text-align: center;
     padding: 48px 40px;
     z-index: 900;
+
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;    
@@ -66,7 +71,12 @@ ul {
   }
 
   &.is-open {
-    display: block;
+    // display: block;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    
   }
 }
 
